app/components/views/TicketsPage/PurchaseTab/LEGACY_PurchasePage/LEGACY_PurchaseTickets/PurchaseTicketsQuickBar/PurchaseTicketsQuickBar.module.css
.quickBar {
  padding: 14px 0 14px 18px;
  height: 56px;
  display: grid;
  grid-template-columns: repeat(4, max-content);
  align-items: center;
  grid-column-gap: 29px;
}
.tooltipContainer {
  height: 25px;
}
.ticketFee {
  grid-column-start: 2;
  grid-row-start: 1;
}
.ticketTxFee {
  grid-column-start: 3;
  grid-row-start: 1;
}
.ticketExpiry {
  grid-column-start: 4;
  grid-row-start: 1;
}
.ticketPoolAddress {
  grid-column-start: 2;
  grid-column-end: span 2;
}
.ticketPoolFee {
  grid-row-start: 2;
  grid-column-start: 4;
}
.icon {
  background-position: 0px 50%;
  background-size: 16px;
  background-repeat: no-repeat;
  padding-left: 30px;
  width: 100%;
  font-family: var(--font-family-monospace);
  color: var(--header-desc-lighter-color);
  font-size: 11px;
  line-height: 11px;
  display: flex;
  align-items: center;
  height: 25px;
}
.icon.stakepool {
  background-image: var(--stake-pool-icon);
}
.icon.expiry {
  background-image: var(--expiry-icon);
}
.icon.fee {
  background-image: var(--split-fee-icon);
}
.icon.ticketAddress {
  background-image: var(--ticket-address-icon);
}
.icon.feeAddress {
  background-image: var(--fee-address-icon);
}
.icon.poolFee {
  background-image: var(--pool-fee-icon);
}
.icon.accountSelect {
  background-image: var(--wallet-gray-icon);
  width: 25px;
  background-position: 2px 5px;
  background-size: 22px;
  align-self: flex-end;
}

@media screen and (max-width: 1179px) {
  .quickBar {
    grid-template-columns: repeat(4, 1fr);
    grid-column-gap: 25px;
  }
}

@media screen and (max-width: 768px) {
  .quickBar {
    grid-template-columns: 103px 106px auto;
    grid-column-gap: 0;
    height: initial;
  }
  .ticketExpiry,
  .ticketTxFee,
  .ticketFee {
    grid-column-start: initial;
    grid-row-start: initial;
  }
  .ticketExpiry {
    grid-column-start: 3;
  }
  .ticketAddress,
  .ticketPoolAddress {
    grid-column-start: 1;
  }
  .ticketPoolFee {
    grid-column-start: 3;
    grid-row-start: 2;
  }
}

